--- a/Condition/index.html
+++ b/Condition/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IF ELSE</title>
+    <title>CONDITION</title>
 </head>
 <body>
-        <script src="if_else.js"></script>
+    <h1>Hello, World!</h1>
+    <script src="new.js"></script>
 </body>
 </html>
