--- a/Function/index.html
+++ b/Function/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <script src="source.js"></script>
+    <script src="recursive.js"></script>
 </body>
 </html>
